# otto

./: .env.example  .gitignore  .railwayignore  .vercelignore  OTTO_CONTEXT.md  README.md  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json  vercel.json
apps/api/: package.json
apps/api/src/: cors.test.ts  cors.ts  env.ts  server.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/hud/: .env.example  README.md  index.html  package.json
apps/hud/src/: App.css  App.tsx  index.css
apps/web/: index.html  package.json  tailwind.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
backend/: pyproject.toml  requirements.txt
backend/app/: brain.py  main.py  queries.py  schemas.py
backend/tests/: test_brain.py  test_converse.py  test_health.py  test_queries.py  test_schemas.py
docs/: 00-fuentes-y-consultas.md  01-data-model.md
docs/backend/: README-import.md  architecture.md  notion-composio.md  roadmap.md  security.md  session_context.md  skills.md  social-zernio.md
docs/superpowers/plans/: 2026-06-09-otto-notion-sync-pipeline.md  2026-06-09-otto-voice-hud-prototype.md  2026-06-18-otto-escena-rediseno.md  2026-06-30-hud-banner-cinematic-reveal.md  2026-07-02-wattson-monorepo.md  2026-07-03-elevenlabs-tts-alfred.md  2026-07-03-handoff-proximos-pasos.md  2026-07-03-hud-zernio-charts.md  2026-07-03-wattson-voice-agent-wiring.md  2026-07-08-alfred-datos-reales-fase1.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: converse.test.ts  converse.ts
(+105 files in other folders)
